# system_design_task_03

./: CMakeLists.txt  Dockerfile  README.md  data.sql  docker-compose.yaml  optimization.md  queries.sql  schema.sql
configs/: config.yaml
src/: main.cpp
src/storage/: postgres_storage.cpp  postgres_storage.h
